# lexi

./: .gitignore  Makefile  README.md  pyproject.toml
lexi/scripts/: lexi.py
