[tool.poetry]
name = "lexi"
version = "1.0.0"
description = "A command line Interactive English Dictionary"
authors = ["paalso <40a.pvl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lexi = "lexi.scripts.lexi:main"

