[tool.poetry]
name = "lexi"
version = "1.1.2"
description = "A command line Interactive English Dictionary"
authors = ["paalso <40a.pvl@gmail.com>"]
include = ["lexi/data/lexicon.json"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lexi = "lexi.scripts.lexi:main"
