[tool.poetry]
name = "lexi"
version = "1.0.0"
description = "A command line interactive English dictionary (lexicon)"
authors = ["paalso <40a.pvl@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
lexi = "lexi.scripts.lexi:main"
